--- a/.github/workflows/main_artwork-service.yml
+++ b/.github/workflows/main_artwork-service.yml
@@ -23,15 +23,16 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          cd ./backend/artwork-service
+          yarn install
+          yarn run build
+          yarn run test
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: ./backend/artwork-service
 
   deploy:
     runs-on: ubuntu-latest
@@ -61,5 +62,5 @@ jobs:
         with:
           app-name: 'artwork-service'
           slot-name: 'Production'
-          package: .
+          package: ./backend/artwork-service
           
