--- a/.github/workflows/main_artwork-service.yml
+++ b/.github/workflows/main_artwork-service.yml
@@ -28,11 +28,11 @@ jobs:
           yarn run build
           yarn run test
       
-      # - name: Upload artifact for deployment job
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: node-app
-      #     path: ./backend/artwork-service
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: node-app
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -44,10 +44,10 @@ jobs:
       id-token: write #This is required for requesting the JWT
 
     steps:
-      # - name: Download artifact from build job
-      #   uses: actions/download-artifact@v4
-      #   with:
-      #     name: node-app
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: node-app
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -62,5 +62,5 @@ jobs:
         with:
           app-name: 'artwork-service'
           slot-name: 'Production'
-          package: ./backend/artwork-service
+          package: .
           
