--- a/.github/workflows/main_artwork-service.yml
+++ b/.github/workflows/main_artwork-service.yml
@@ -27,11 +27,14 @@ jobs:
           yarn run build
           yarn run test
       
+      - name: Zip all files for upload between jobs
+        run: Compress-Archive -Path .\* -DestinationPath nest.zip
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: .
+          path: nest.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -61,5 +64,8 @@ jobs:
         with:
           app-name: 'artwork-service'
           slot-name: 'Production'
-          package: .
+          package: nest.zip
+
+      - name: Delete zip file
+        run: rm nest.zip
           
