--- a/.github/workflows/main_artwork-service-container.yml
+++ b/.github/workflows/main_artwork-service-container.yml
@@ -6,7 +6,7 @@ name: Build and deploy container app to Azure Web App - artwork-service-containe
 on:
   push:
     branches:
-      - main
+      - docker
   workflow_dispatch:
 
 jobs:
