--- a/.github/workflows/docker_artwork-service-container.yml
+++ b/.github/workflows/docker_artwork-service-container.yml
@@ -23,14 +23,14 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: https://yanayartwork.azurecr.io/
-        username: ${{ secrets.AzureAppService_ContainerUsername_b4409d7409144e51bead54679c3f47ad }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_8a3cb5a3d64d4da1946235e1efdb175d }}
+        username: ${{ secrets.AzureAppService_ContainerUsername_b6d55e46ad02476fb6dd3dbb28a1d19d }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_862121e35eca4b5981aef63f50f33f70 }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: yanayartwork.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_b4409d7409144e51bead54679c3f47ad }}/artwork-service:${{ github.sha }}
+        tags: yanayartwork.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_b6d55e46ad02476fb6dd3dbb28a1d19d }}/webimage:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'artwork-service-container'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_aeb818f6ce8d4fd4bc8bd91e1dcb07b4 }}
-        images: 'yanayartwork.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_b4409d7409144e51bead54679c3f47ad }}/artwork-service:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_936dc2026fac45f981f1df024d3c7e40 }}
+        images: 'yanayartwork.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_b6d55e46ad02476fb6dd3dbb28a1d19d }}/webimage:${{ github.sha }}'
